<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/teal_700">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:fontFamily="casual"
        android:gravity="center_vertical"
        android:paddingTop="0px"
        android:text="@string/pogo_fish_credits"
        android:textSize="45sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/created_by"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:gravity="center"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/kimmy"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:gravity="center"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/longnghi"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:gravity="center"
            android:fontFamily="casual"
            android:text="@string/cuong"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="casual"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/semester_course"
            android:textSize="15sp"
            android:textStyle="bold" />



    </LinearLayout>

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#ACACAC"
        android:foregroundTint="#F8F8F8"
        android:text="@string/back_to_main_button"
        android:textColor="#000000"
        app:iconTint="#FFFFFF" />
</LinearLayout>