<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/teal_700">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="45sp"
        android:textStyle="bold"
        android:fontFamily="casual"
        android:text="@string/how_to_title" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/instruction_text_view"
            android:layout_width="337dp"
            android:layout_height="252dp"
            android:fontFamily="casual"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/instruction_pogo"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/next_instruction"
                android:layout_width="47dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#ACACAC"
                android:foregroundTint="#F8F8F8"
                android:gravity="center"
                android:text="@string/next_button"
                android:textColor="#000000"
                app:iconTint="#FFFFFF" />

            <Button
                android:id="@+id/prev_instruction"
                android:layout_width="47dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#ACACAC"
                android:foregroundTint="#F8F8F8"
                android:gravity="center"
                android:text="@string/prev_button"
                android:textColor="#000000"
                app:iconTint="#FFFFFF" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#ACACAC"
        android:foregroundTint="#F8F8F8"
        android:text="@string/back_to_main_button"
        android:textColor="#000000"
        app:iconTint="#FFFFFF" />
</LinearLayout>